some rearrangements for coverage build
svn path=/trunk/; revision=7368


Former-commit-id: 12abfb27432d27ec156ffd09146604a13e55f9ad