@@ -47,9 +47,9 @@
 
     <parent>
         <groupId>org.glassfish.metro</groupId>
-        <artifactId>metro-project</artifactId>
+        <artifactId>wsit-tests</artifactId>
         <version>2.3-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -60,7 +60,6 @@
     <description>Metro End to End Tests</description>
 
     <properties>
-        <netbeans.hint.jdkPlatform>JDK_1.6</netbeans.hint.jdkPlatform>
         <!-- DEFAULT = JAXB, TOPLINK = MOXy -->
         <ws.databinding>DEFAULT</ws.databinding>
         <!-- IN_VM, LWHS, TOMCAT (requires tomcat.home to be set) -->
@@ -132,45 +131,16 @@
             <plugin>
                 <groupId>org.glassfish.metro</groupId>
                 <artifactId>harness-maven-plugin</artifactId>
-                <version>0.1-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>ws-test</goal>
                         </goals>
-                        <configuration>
-                            <tests>${ws.test}</tests>
-                            <version>${project.osgi.version}</version>
-                            <databinding>${ws.databinding}</databinding>
-                            <transport>${ws.transport}</transport>
-                            <extraVmArgs>${ws.jvmOpts}</extraVmArgs>
-                            <!--<debug>true</debug>-->
-                            <vmArgs>
-                                <vmArg>-Xms256m -Xmx512m -XX:PermSize=128m -XX:MaxPermSize=256m</vmArg>
-                            </vmArgs>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <!-- temporary definition for harness plugin to be found-->
-            <id>temp</id>
-            <url>https://maven.java.net/content/repositories/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-                <updatePolicy>never</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </snapshots>
-            <layout>default</layout>
-        </pluginRepository>
-    </pluginRepositories>
 
     <profiles>
         <profile>
@@ -185,6 +155,7 @@
                     <groupId>${project.groupId}</groupId>
                     <artifactId>metro-standalone</artifactId>
                     <version>${project.version}</version>
+                    <classifier>${metro.dep.classifier}</classifier>
                     <type>zip</type>
                 </dependency>
             </dependencies>
@@ -222,7 +193,6 @@
                     <plugin>
                         <groupId>org.glassfish.metro</groupId>
                         <artifactId>harness-maven-plugin</artifactId>
-                        <version>0.1-SNAPSHOT</version>
                         <configuration>
                             <localImage>${project.build.directory}/image</localImage>
                         </configuration>
@@ -242,7 +212,6 @@
                     <plugin>
                         <groupId>org.glassfish.metro</groupId>
                         <artifactId>harness-maven-plugin</artifactId>
-                        <version>0.1-SNAPSHOT</version>
                         <configuration>
                             <imageUrl>${wsit.hudson.url}</imageUrl>
                             <transportUrl>${transport.hudson.url}/jaxws-ri/transports/local/target/jaxws-local-transport.jar</transportUrl>
@@ -259,14 +228,14 @@
                 </property>
             </activation>
             <properties>
-                <ws.jvmOpts>-Dnet.sourceforge.cobertura.datafile=${basedir}/target/cobertura.ser</ws.jvmOpts>
+                <net.sourceforge.cobertura.datafile>${project.build.directory}/target/cobertura/cobertura.ser</net.sourceforge.cobertura.datafile>
+                <ws.jvmOpts>-Dnet.sourceforge.cobertura.datafile=${project.build.directory}/cobertura.ser</ws.jvmOpts>
             </properties>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.7</version>
                         <executions>
                             <execution>
                                 <id>copy-ser-file</id>
@@ -285,9 +254,6 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>cobertura-maven-plugin</artifactId>
-                        <configuration>
-                            <forceMojoExecution>true</forceMojoExecution>
-                        </configuration>
                         <executions>
                             <execution>
                                 <id>instrument-code</id>
@@ -296,7 +262,7 @@
                                     <goal>instrument</goal>
                                 </goals>
                                 <configuration>
-                                    <attach>true</attach>
+                                    <forceMojoExecution>true</forceMojoExecution>
                                 </configuration>
                             </execution>
                         </executions>
